--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <button class="restart-btn" id="restartBtn" title="إعادة اللعب">🔄</button>
 
-        <!-- 🏆 قائمة أفضل 5 لاعبين -->
+        <!-- 🏆 قائمة أفضل 5 لاعبين داخل شاشة النهاية -->
         <div class="leaderboard">
           <h3>🏆 أفضل 5 لاعبين عالمياً</h3>
           <ul class="leaderboard-list" id="leaderboardList">
@@ -135,27 +135,38 @@
       <button class="control-btn" id="leftBtn">➡️</button>
       <button class="control-btn" id="rightBtn">⬅️</button>
     </div>
-  </div>
-</div>
 
-<!-- 📊 ملخص الجلسة (يظهر في أسفل اليسار) -->
-<div id="sessionSummary">
-  <h4>📊 ملخص الجلسة</h4>
-  <div class="stat">
-    <span class="stat-label">عدد الألعاب:</span>
-    <span class="stat-value" id="sessionGamesCount">0</span>
-  </div>
-  <div class="stat">
-    <span class="stat-label">إجمالي النقاط:</span>
-    <span class="stat-value" id="sessionTotalScore">0</span>
-  </div>
-  <div class="stat">
-    <span class="stat-label">أعلى نقاط:</span>
-    <span class="stat-value" id="sessionHighScore">0</span>
-  </div>
-  <div class="stat">
-    <span class="stat-label">المتوسط:</span>
-    <span class="stat-value" id="sessionAvgScore">0</span>
+    <!-- ======================================================
+         🏆 قائمة Top 5 الحية - تظهر دائماً تحت اللعبة
+         تُحمَّل من الكاش فوراً ثم تُحدَّث من السحابة
+    ====================================================== -->
+    <div id="live-leaderboard-section">
+      <div class="live-lb-header">
+        <span class="live-lb-title">🏆 أفضل 5 لاعبين</span>
+        <span class="live-lb-status" id="liveLeaderboardStatus">⏳ جاري التحميل...</span>
+      </div>
+      <div class="live-lb-scroll">
+        <ul class="live-lb-list" id="liveLeaderboardList">
+          <!-- يتم ملؤها تلقائياً من JS -->
+          <li class="live-lb-item live-lb-loading">
+            <span class="live-lb-skeleton"></span>
+            <span class="live-lb-skeleton" style="width:60%"></span>
+            <span class="live-lb-skeleton" style="width:40px"></span>
+          </li>
+          <li class="live-lb-item live-lb-loading">
+            <span class="live-lb-skeleton"></span>
+            <span class="live-lb-skeleton" style="width:50%"></span>
+            <span class="live-lb-skeleton" style="width:40px"></span>
+          </li>
+          <li class="live-lb-item live-lb-loading">
+            <span class="live-lb-skeleton"></span>
+            <span class="live-lb-skeleton" style="width:70%"></span>
+            <span class="live-lb-skeleton" style="width:40px"></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+
   </div>
 </div>
 
@@ -364,21 +375,6 @@ async function checkForUpdates() {
 window.addEventListener('load', checkForUpdates);
 document.addEventListener('visibilitychange', () => {
   if (!document.hidden) checkForUpdates();
-});
-</script>
-
-<!-- ✅ كود ملخص الجلسة المصحح -->
-<script>
-// تحديث العرض كل 10 ثواني
-setInterval(() => {
-  if (typeof updateSessionSummaryDisplay === 'function') {
-    updateSessionSummaryDisplay();
-  }
-}, 10000);
-
-// إخفاء الملخص عند النقر عليه
-document.getElementById('sessionSummary')?.addEventListener('click', function() {
-  this.classList.remove('show');
 });
 </script>
 
