--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <button class="restart-btn" id="restartBtn" title="إعادة اللعب">🔄</button>
 
-        <!-- 🏆 قائمة أفضل 5 لاعبين داخل شاشة النهاية -->
+        <!-- 🏆 قائمة أفضل 5 لاعبين -->
         <div class="leaderboard">
           <h3>🏆 أفضل 5 لاعبين عالمياً</h3>
           <ul class="leaderboard-list" id="leaderboardList">
@@ -136,10 +136,10 @@
       <button class="control-btn" id="rightBtn">⬅️</button>
     </div>
 
-    <!-- ======================================================
-         🏆 قائمة Top 5 الحية - تظهر دائماً تحت اللعبة
+    <!-- ========================================
+         🏆 Top 5 الحية - تحت اللعبة دائماً
          تُحمَّل من الكاش فوراً ثم تُحدَّث من السحابة
-    ====================================================== -->
+    ========================================= -->
     <div id="live-leaderboard-section">
       <div class="live-lb-header">
         <span class="live-lb-title">🏆 أفضل 5 لاعبين</span>
@@ -147,7 +147,6 @@
       </div>
       <div class="live-lb-scroll">
         <ul class="live-lb-list" id="liveLeaderboardList">
-          <!-- يتم ملؤها تلقائياً من JS -->
           <li class="live-lb-item live-lb-loading">
             <span class="live-lb-skeleton"></span>
             <span class="live-lb-skeleton" style="width:60%"></span>
@@ -295,7 +294,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 <script>
   if (typeof pdfjsLib !== 'undefined') {
-    pdfjsLib.GlobalWorkerOptions.workerSrc = 
+    pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
   }
 </script>
