--- a/index.html
+++ b/index.html
@@ -135,8 +135,36 @@
       <button class="control-btn" id="leftBtn">➡️</button>
       <button class="control-btn" id="rightBtn">⬅️</button>
     </div>
+    <!-- ========================================
+         🏆 Top 5 الحية - تحت اللعبة دائماً
+         تُحمَّل من الكاش فوراً ثم تُحدَّث من السحابة
+    ========================================= -->
+    <div id="live-leaderboard-section">
+      <div class="live-lb-header">
+        <span class="live-lb-title">🏆 أفضل 5 لاعبين</span>
+        <span class="live-lb-status" id="liveLeaderboardStatus">⏳ جاري التحميل...</span>
+      </div>
+      <div class="live-lb-scroll">
+        <ul class="live-lb-list" id="liveLeaderboardList">
+          <li class="live-lb-item live-lb-loading">
+            <span class="live-lb-skeleton"></span>
+            <span class="live-lb-skeleton" style="width:60%"></span>
+            <span class="live-lb-skeleton" style="width:40px"></span>
+          </li>
+          <li class="live-lb-item live-lb-loading">
+            <span class="live-lb-skeleton"></span>
+            <span class="live-lb-skeleton" style="width:50%"></span>
+            <span class="live-lb-skeleton" style="width:40px"></span>
+          </li>
+          <li class="live-lb-item live-lb-loading">
+            <span class="live-lb-skeleton"></span>
+            <span class="live-lb-skeleton" style="width:70%"></span>
+            <span class="live-lb-skeleton" style="width:40px"></span>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
-</div>
 
 <!-- 📊 ملخص الجلسة (يظهر في أسفل اليسار) -->
 <div id="sessionSummary">
