--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
     ========================================= -->
     <div id="live-leaderboard-section">
       <div class="live-lb-header">
-        <span class="live-lb-title">🏆 أفضل 5 لاعبين</span>
+        <span class="live-lb-title">
+.
+🏆 أفضل 5 لاعبين</span>
         <span class="live-lb-status" id="liveLeaderboardStatus">⏳ جاري التحميل...</span>
       </div>
       <div class="live-lb-scroll">
