--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       </g>
       <g id="reset-btn" style="cursor: pointer;">
         <rect x="654" y="100" width="250" height="50" rx="10"/>
-        <text id="reset-btn-text" x="779" y="130" text-anchor="middle" dominant-baseline="middle">🔄 test </text>
+        <text id="reset-btn-text" x="779" y="130" text-anchor="middle" dominant-baseline="middle">Clear cache 🗑</text>
       </g>
       <g id="back-button-group" style="cursor: pointer;">
         <rect id="back-btn" x="112" y="160" width="800" height="70" rx="15" />
