--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       </g>
       <g id="preload-btn" style="cursor: pointer;">
         <rect x="387" y="100" width="250" height="50" rx="10"/>
-        <text x="512" y="130" text-anchor="middle" dominant-baseline="middle">🔄 شاشة التحميل</text>
+        <text x="512" y="130" text-anchor="middle" dominant-baseline="middle">Loading screen 🎮</text>
       </g>
       <g id="reset-btn" style="cursor: pointer;">
         <rect x="654" y="100" width="250" height="50" rx="10"/>
